# transvert

./: README.md  pyproject.toml
VKClipper/: config.py  main.py  pyproject.toml  test.py
bot/: pyproject.toml
bot/src/: dispatcher.py  env.dev  main.py
bot/src/core/: config.py
bot/src/frontend/handlers/: buttons.py  message_handlers.py  texts.py
