[tool.poetry]
name = "bot"
version = "0.1.0"
description = ""
authors = ["Daniil Ermolaev <blcklptn@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^2.25.1"
python-dotenv = "^1.0.0"
pydantic = "^2.0.3"
pydantic-settings = "^2.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
